# khepera

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Makefile2  README.md  bashTest.cpp  calibKhepera.bash  cmake_install.cmake  connectWiFi.bash  cross  cross.cpp  estimatePose.bash  poseEstimate  poseEstimate.cpp  receivedEstimate.yaml  takePhoto.bash
aruco-markers/: markers.docx
camera-calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  calibKhepera.bash  cmake_install.cmake  kheperaCalibration  kheperaCalibration.cpp  root@192.168.43.233
include/: khepera.h
opencv-toolchain-files/: arm-gnueabi.toolchain.cmake
pose-estimate/: CMakeCache.txt  Makefile  cmake_install.cmake  estimatePose.bash  notes.txt  poseEstimate  poseEstimate.cpp
swarm-comms/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.yaml  cameraData.xml  cmake_install.cmake  position.yaml  swarmComms  swarmComms.cpp
test-code/: CMakeCache.txt  CMakeLists.txt  Makefile  bashTest  bashTest.cpp  bashTestK2  cmake_install.cmake  my.yaml  myBash.bash  myEstimate.yaml  receivedEstimate.yaml  scratchWork  scratchWork.cpp
